kubernetes/apps/default/searxng/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: searxng-egress-label
specs:
  - endpointSelector:
      matchLabels:
        egress.cilium.io/search: "true"
    egress:
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: searxng
        toPorts:
          - ports:
              - port: "80"
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: searxng-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: searxng
  egress:
    - toEndpoints:
        - matchLabels:
            app: searxng-dragonfly
      toPorts:
        - ports:
            - port: "6379"
